--- a/templates/index.html
+++ b/templates/index.html
@@ -1,17 +1,11 @@
-<html>
-  <body>
-    <h1>Hello from index.html!</h1>
-  </body>
-</html>
-
 {% extends 'base.html' %}
 
 {% block title %}Welcome to my page{% endblock %}
 
 {% block body %}
-<main>
-  <h1>Davis Hoffstatter</h1>
-  <p>
+<main class="container mt-5">
+  <h1 class="display-4">Davis Hoffstatter</h1>
+  <p class="lead">
     Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit minus, iste ea cumque et
     placeat non vero, veritatis quis quia minima, quod fuga! Sequi necessitatibus at ab aliquid
     voluptatem illo.
